--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,4 +1,4 @@
 cmake_minimum_required(VERSION 3.16)
-project(make-psylink-file LANGUAGES CXX)
+project(make_psylink_file LANGUAGES CXX)
 
-add_executable(make-psylink-file "source/main.cpp")
+add_executable(make_psylink_file "source/main.cpp")
