--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 3.16)
-project(makepsylink LANGUAGES CXX)
+project(mkpsylink LANGUAGES CXX)
 
-add_executable(makepsylink
+add_executable(mkpsylink
 	"src/main.cpp")
